samples/_failures_safe/1761147866_dee501_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f246af60.c: In function ‘main’:
./samples/SAFE/__tmp_f246af60.c:138:9: error: expected declaration or statement at end of input
  138 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_f246af60.c:138:9: error: expected declaration or statement at end of input
